--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,28 @@
 .App {
-  text-align: center;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: right;
+  text-align: left;
+  gap: 20px;
+}
+
+.text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.card {
+  display: flex;
+  border: 1px solid black;
+  width: 700px;
+}
+
+.card>img {
+  margin: 20px;
+  object-fit: cover;
 }
 
 .App-logo {
@@ -32,7 +55,53 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.CreditCard {
+  margin: 5px;
+
+}
+
+.credit-card {
+  display: flex;
+}
+
+.CreditCardLogo {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px;
+}
+
+.CreditCardNumber {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.driver-card {
+  border-radius: 10px;
+  padding: 20px;
+  margin: 8px 0;
+  width: 900px;
+  background-color: royalblue;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.driver-card>img {
+  border-radius: 50%;
+  width: 115px;
+  height: 100px;
+  margin-right: 5px;
+  object-fit: cover;
+}
+
+.driver-card>div {
+  color: white;
 }
