--- a/src/App.css
+++ b/src/App.css
@@ -96,12 +96,16 @@
 
 .driver-card>img {
   border-radius: 50%;
-  width: 115px;
+  width: 100px;
   height: 100px;
-  margin-right: 5px;
+  margin-right: 20px;
   object-fit: cover;
 }
 
 .driver-card>div {
   color: white;
+}
+
+.stars {
+  font-size: 30px;
 }
